Added show detail screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="app_name">Xarxa Català</string>
     <string name="title_home">Sèries</string>
     <string name="title_downloads">Descàrregues</string>
-    <string name="title_shows">My shows</string>
+    <string name="title_watching">My shows</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
