--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="not_available">Funcionalitat encara no disponible. Estarà disponible en un futur no molt llunyà!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
